# pat

./: .gitignore  CLAUDE.md  README.md  package-lock.json  playwright.config.ts  start.cmd  start.sh  stop.cmd  stop.sh
backend/: pyproject.toml
backend/app/: config.py  main.py
backend/app/analyzer/: greeks.py  leaps.py  metrics.py  optimizer.py  options.py
backend/app/models/: __init__.py  alert.py  paper_trade.py  portfolio.py
backend/app/routers/: alerts.py  analyzer.py  backtest.py  elliott_wave.py  import_export.py  options.py  paper_trading.py  portfolio.py  signals.py
backend/app/schemas/: alert.py  analyzer.py  backtest.py  elliott_wave.py  import_export.py  optimizer.py  options.py  paper_trade.py  portfolio.py  signals.py
backend/app/signals/: backtest.py  composite.py  elliott_wave.py  risk.py  scoring.py  technical.py
backend/app/tracker/: csv_import.py  market_data.py
backend/tests/: test_elliott_wave.py  test_metrics.py  test_options.py  test_phase6.py  test_portfolio_crud.py  test_signals.py
docs/: architecture.md  roadmap.md  signals.md
e2e/: app.spec.ts
frontend/: package-lock.json  package.json
frontend/src/: App.css  App.tsx
frontend/src/pages/: Alerts.css  Alerts.tsx  Analytics.css  Analytics.tsx  Architecture.css  Architecture.tsx  Backtest.css  Backtest.tsx  Dashboard.css  Dashboard.tsx  ElliottWave.css  ElliottWave.tsx  Help.css  Help.tsx  Import.css  Import.tsx  Optimize.css  Optimize.tsx  Options.css  Options.tsx  PaperTrading.css  PaperTrading.tsx  Signals.css  Signals.tsx
frontend/src/types/: analyzer.ts  backtest.ts  (+4 more)
